Readability and formatting fixes

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
 .App {
+  width: 100%;
+  height: 1080px;
+  display: flex;
+  flex-flow: column;
   text-align: center;
+  background: url("./assets/austin.jpg") no-repeat center center fixed;
+  background-size: cover;
 }
 
 .App-logo {
